# Movie-Trailer-Generator

./: .gitignore  Pipfile  README.md  app.py  config.py  functions.py  pyproject.toml  requirements-test.txt  requirements.txt  structure.txt  todo.md
.cursor/rules/: streamlit.mdc
assets/data/: conflict.json  genre.json  main_character.json  movie_data.json  plot_twist.json  setting.json
documentation/: codebase_evaluation.md  design.md  todo.md
pages/: api_keys.py  audio_browser.py  ollama_guide.py
scripts/: functions.py  openrouter_client.py  prompts.py
src/stupid-movie-trailer-generator/: __init__.py
tests/: __init__.py  conftest.py  test_api_key_manager.py  test_app_functions.py  test_audio_functions.py  test_config.py  test_movie_name_generation.py  test_network_resilience.py  test_openrouter.py  test_openrouter_client.py  test_prompts.py  test_voice_generation.py  utils.py
utils/: api_key_manager.py  llm_api.py
