[project]
name = "stupid-movie-trailer-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "requests",
    "streamlit",
    "audiostretchy",
    "python-ffmpeg",
    "moviepy",
    "pydub",
    "ffmpeg>=1.4",
    "watchdog>=6.0.0",
    "openai>=1.75.0",
]

[tool.uv]
dev-dependencies = [
    "isort",
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "requests-mock",
    "types-requests",
    "types-setuptools",
]
